--- a/Assignment-1/q1.ipynb
+++ b/Assignment-1/q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,54 +107,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  dataset[column].fillna(median_val , inplace = True) ;\n",
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  dataset[column].fillna(median_val , inplace = True) ;\n",
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:38: SettingWithCopyWarning: \n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:38: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataset[column].fillna(median_val , inplace = True) ;\n",
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  dataset[column].fillna(median_val , inplace = True) ;\n",
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  dataset[column].fillna(median_val , inplace = True) ;\n",
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  dataset[column].fillna(median_val , inplace = True) ;\n",
-      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_20680\\1747376723.py:47: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Aditya\\AppData\\Local\\Temp\\ipykernel_29628\\1747376723.py:47: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus we get the chi_squared_value($\\chi^2$) as 101.56 . Now we know that the degree of freedom(dof) is (r-1) * (c-1) = 52 in this case as r = 5 and c = 14 . Now we know significance as 5 % . Thus it is a two sided test so the level of significance for each side will be 2.5% . Thus we can look in the table and answer the hypothesis . We can see that the threshold in the table is 73.810 . Thus ($\\chi^2$) > 73.810 . Thus we reject the null hypothesis that they are independent and thus conclude that number of cylinders are not independent of model years . "
+    "Thus we get the chi_squared_value($\\chi^2$) as 101.56 . Now we know that the degree of freedom(dof) is (r-1) * (c-1) = 52 in this case as r = 5 and c = 14 . Now we know significance as 5 % . Thus it is a one sided test so the level of significance will remain as 5 % . Thus we can look in the table and answer the hypothesis . We can see that the threshold in the table is 73.810 . Thus ($\\chi^2$) > 69.832 . Thus we reject the null hypothesis that they are independent and thus conclude that number of cylinders are not independent of model years . "
    ]
   }
  ],
